# doc_visual_parsor

./: .env.sample  .gitignore  LOGGING_GUIDE.md  MANIFEST.in  PACKAGING_GUIDE.md  README-zh.md  README.md  REFACTORING_SUMMARY.md  build_script.py  demo_logging.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_app.py  run_backend.py  run_frontend.py  run_full_app.py  run_tests.py  section_tree.json  test_api.py  test_layout_detection.py
backend/: README.md  __init__.py  api_server.py  document_analyzer.py  docx_processor.py  pdf_processor.py  session_manager.py  ui_components.py
doc_chunking/: __init__.py  api.py
doc_chunking/core/processors/: bbox_nlp_processor.py  doc_to_pdf_processor.py  page_chunker.py  page_image_layout_processor.py  rechunking_base_on_title.py  table_processor.py  title_structure_processor.py
doc_chunking/documents_chunking/: chunker.py
doc_chunking/layout_detection/: .gitignore  __init__.py  test_native_docx_parsor.ipynb
doc_chunking/layout_detection/base/: base_layout_extractor.py
doc_chunking/layout_detection/layout_extraction/: docx_layout_extractor.py  pdf_layout_extractor.py  pdf_style_cv_mix_extractor.py
doc_chunking/layout_detection/utils/: layout_processing.py  visualiza_layout_elements.py
doc_chunking/naive_llm/: README.md  __init__.py  tree_like_structure_mapping.py
doc_chunking/processors/: __init__.py  docx_processor.py  pdf_processor.py
doc_chunking/schemas/: __init__.py  files.py  layout_schemas.py  schemas.py
doc_chunking/scripts/: __init__.py  run_server.py
doc_chunking/utils/: helper.py  llm.py  logging_config.py  word_convert_pdf.py
examples/: integration_example.py  library_usage_example.py  position_examples.py
frontend/: README.md  api_client.py  app.py  session_manager.py  ui_components.py
frontend/doc-chunking-ui/: README.md
models/: __init__.py
models/documents_chunking/: README.md  chunker.py
models/layout_detection/: .gitignore  PDF_Fragment_Merging_Strategy.md  README.md  __init__.py  base_detector.py  comprehensive_style_extractor.py  comprehensive_style_guide.py  cv_detector.py  demo_layout_detection.py  demo_modular_detection.py  detector.py  detector_factory.py  document_detector.py  download_model.py  extract_underline_style.py  pymupdf_style_extractor.py  section_parsing.py  test_native_docx_parsor.ipynb
models/layout_structuring/: README.md
models/naive_llm/: __init__.py  section_token_parsor.py  tree_like_structure_mapping.py
models/naive_llm/agents/: control.py  (+3 more)
models/schemas/: docx_schemas.py  layout_schemas.py  schemas.py
models/utils/: llm.py  schemas.py
tests/: README.md  __init__.py  test_api.sh  test_document_analyzer.py  test_docx_processor.py  test_pdf_processor.py  test_session_manager.py  test_ui_components.py  test_upload_file.sh  timing_test.py
tests/test_data/: 1-1 买卖合同（通用版）.docx  1-1 买卖合同（通用版）.txt  1-2设备采购合同.docx
(+53 files in other folders)
